# WiPy

./: .gitignore  .travis.yml  Makefile  Pipfile  _config.yml  index.md  pyproject.toml  setup.cfg  setup.py
pyric/: __init__.py  pyw.py
pyric/lib/: libio.py  libnl.py
pyric/net/: __init__.py  genetlink_h.py  if_h.py  netlink_h.py  policy.py  sockios_h.py
pyric/net/wireless/: nl80211_c.py  nl80211_h.py  rfkill_h.py  wlan.py
pyric/nlhelp/: nlsearch.py
pyric/scripts/: ouiupdate.py
pyric/utils/: channels.py  hardware.py  ouifetch.py  rfkill.py
tests/: test_wireless.py
